@@ -9,6 +9,7 @@ import ac.memory.Memory;
 import ac.memory.MemoryException;
 import ac.shared.FOLObjects.Option_FOL;
 import agent.Action;
+import agent.Action.Move;
 
 /**
  * Class ChoiceEngine Cette classe implémente la prise de décision
@@ -43,8 +44,10 @@ class ChoiceEngine
 
   Action start()
   {
+
     List<Pair<Option_FOL, Double>> options_list = null;
     Option_FOL option;
+	Action move = null;
 
     try
       {
@@ -55,19 +58,34 @@ class ChoiceEngine
         LOGGER.error("An error occurred during getting options.", e);
         return new Action.Exit();
       }
+    
+    if(options_list.size() == 0)
+      {
+        LOGGER.debug("Pas de choix en mémoire");
+        return new Action.Skip();
+      }
+
 
     option = this.getBetterOption(options_list);
-
-    try
+    
+    if (option != null)
       {
-        this._memory.OptionChosen(option);
+        try
+          {
+            this._memory.OptionChosen(option);
+          }
+        catch (MemoryException e)
+          {
+            LOGGER.error("An error occurred during storing a choice.", e);
+          }
+        
+        move = option.getMove();
       }
-    catch (MemoryException e)
-      {
-        LOGGER.error("An error occurred during storing a choice.", e);
-      }
+    else
+      LOGGER.debug("Better option null");
 
-    return option.getMove();
+
+    return move;
   }
 
   // ***************************************************************************
@@ -76,15 +94,20 @@ class ChoiceEngine
 
   private Option_FOL getBetterOption(List<Pair<Option_FOL, Double>> options_list)
   {
-    Option_FOL better_option = options_list.get(0).getFirst();
-    double max_grade = options_list.get(0).getSecond();
+    Option_FOL better_option = null;
 
-    for (Pair<Option_FOL, Double> pair : options_list)
-      if (pair.getSecond() > max_grade)
-        {
-          better_option = pair.getFirst();
-          max_grade = pair.getSecond();
-        }
+    if (options_list.size() > 0)
+      {
+        better_option = options_list.get(0).getFirst();
+        double max_grade = options_list.get(0).getSecond();
+
+        for (Pair<Option_FOL, Double> pair : options_list)
+          if (pair.getSecond() > max_grade)
+            {
+              better_option = pair.getFirst();
+              max_grade = pair.getSecond();
+            }
+      }
 
     return better_option;
   }
